--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,12 @@ ul.catalogue {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(4, 1fr);
 }
+
+.resultContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.poster-image {
+  width: 20vw;
+}
