--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,27 @@ ul.catalogue {
 .poster-image {
   width: 20vw;
 }
+
+.modal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  width: 50%;
+  height: 50%;
+  background: #EADBC4;
+}
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 7rem 3rem 3rem;
+  position: relative;
+  background: transparent;
+}
