adding scss variables, stlying to main page and footer

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,234 +1,9 @@
-html {
-  line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%
-}
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&family=Lato:wght@300;400;700&display=swap');
 
-body {
-  margin: 0
-}
+@import "normalize";
+@import "variables";
+@import "footer";
 
-article, aside, footer, header, nav, section {
-  display: block
-}
-
-h1 {
-  font-size: 2em;
-  margin: .67em 0
-}
-
-figcaption, figure, main {
-  display: block
-}
-
-figure {
-  margin: 1em 40px
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible
-}
-
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em
-}
-
-a {
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects
-}
-
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted
-}
-
-b, strong {
-  font-weight: inherit
-}
-
-b, strong {
-  font-weight: bolder
-}
-
-code, kbd, samp {
-  font-family: monospace, monospace;
-  font-size: 1em
-}
-
-dfn {
-  font-style: italic
-}
-
-mark {
-  background-color: #ff0;
-  color: #000
-}
-
-small {
-  font-size: 80%
-}
-
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline
-}
-
-sub {
-  bottom: -.25em
-}
-
-sup {
-  top: -.5em
-}
-
-audio, video {
-  display: inline-block
-}
-
-audio:not([controls]) {
-  display: none;
-  height: 0
-}
-
-img {
-  border-style: none
-}
-
-svg:not(:root) {
-  overflow: hidden
-}
-
-button, input, optgroup, select, textarea {
-  font-family: sans-serif;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0
-}
-
-button, input {
-  overflow: visible
-}
-
-button, select {
-  text-transform: none
-}
-
-button, html [type=button], [type=reset], [type=submit] {
-  -webkit-appearance: button
-}
-
-button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
-  border-style: none;
-  padding: 0
-}
-
-button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText
-}
-
-fieldset {
-  padding: .35em .75em .625em
-}
-
-legend {
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal
-}
-
-progress {
-  display: inline-block;
-  vertical-align: baseline
-}
-
-textarea {
-  overflow: auto
-}
-
-[type=checkbox], [type=radio] {
-  box-sizing: border-box;
-  padding: 0
-}
-
-[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
-  height: auto
-}
-
-[type=search] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px
-}
-
-[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
-  -webkit-appearance: none
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit
-}
-
-details, menu {
-  display: block
-}
-
-summary {
-  display: list-item
-}
-
-canvas {
-  display: inline-block
-}
-
-template {
-  display: none
-}
-
-[hidden] {
-  display: none
-}
-
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: '';
-  clear: both;
-  height: 0;
-}
-
-html {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 
 .App {
   text-align: center;
@@ -241,7 +16,7 @@ html {
 }
 
 .App-header {
-  background-color: #eaf0fd;
+  background-color: $primaryColor;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -252,7 +27,7 @@ html {
 }
 
 .App-link {
-  color: #61dafb;
+  color: $secondaryColor;
 }
 
 .userListContainer {
@@ -263,13 +38,17 @@ html {
 }
 
 body {
-  font-family: 'Helvetica';
-  background-color: #ABBEBA;
+  font-family: $headerFont;
+  background-color: $tertiaryColor;
 }
 
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+span {
+  color: $primaryColor;
 }
 
 ul {
@@ -279,9 +58,10 @@ ul {
 }
 
 header {
-  background-color: #ABBEBA;
+  background-color: $tertiaryColor;
   padding: 30px 15px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 header a {
@@ -289,9 +69,10 @@ header a {
 }
 
 h1 {
-  color: red;
-  font-size: 30px;
-  font-weight: 600;
+  color: $secondaryColor;
+  font-size: 4rem;
+  font-weight: 700;
+  text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.8);
 }
 
 h2 {
@@ -300,10 +81,14 @@ h2 {
   font-size: 23px;
 }
 
-img {
-  display: block;
-  max-width: 100%;
+img:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  border: 10px solid rgba(0, 0, 0, 0.4);
 }
+
+
 
 /* MovieDetails */
 
@@ -365,16 +150,18 @@ ul.catalogue {
 }
 
 .modal>div {
-  background-color: #EADBC4;
+  background-color: $primaryColor;
   opacity: 0.9;
   border-radius: 50px;
   width: 50vw;
-  height: 50vw;
+  height: 40vw;
   display: flex;
   align-items: center;
   justify-content: center;
   /* transform: scale(0); */
   transition: all 0.4s ease;
+  position: absolute;
+  top: 20px;
 }
 
 .modalContent {
@@ -386,4 +173,5 @@ ul.catalogue {
   padding: 7rem 3rem 3rem;
   position: relative;
   background: transparent;
+    transition: all 0.4s ease;
 }
