--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -3,6 +3,7 @@
 
 .modal {
   display: flex;
+
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -27,16 +28,43 @@
   transition: all 0.4s ease;
   position: absolute;
   top: 20px;
+  border: 3px solid #000;
 }
 
-.modalContent {
+.modalTextContent {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  padding: 7rem 3rem 3rem;
+  text-align: justify;
+  padding: 20px;
   position: relative;
   background: transparent;
-    transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  width: 50%;
+  height: 70%;
+  // border: 2px solid red;
+  // overflow: auto;
 }
+
+.modalImageContent {
+  height: 70%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: 80%;
+    display: block;
+    margin-bottom: 40px;
+  }
+
+  button {
+    height: 50px;
+    width: 200px;
+    cursor: pointer;
+  }
+}
+
