--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -76,6 +76,27 @@ h2 {
   text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
 }
 
+h3 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 700;
+  color: $secondaryColor;
+  margin: 15px 0;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.9);
+
+
+}
+
+h4 {
+  text-transform: uppercase;
+  padding: 15px 0;
+
+    span {
+    text-transform: capitalize;
+
+  }
+}
+
 p {
   font-family: $bodyFont;
 }
