--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -8,7 +8,7 @@ footer {
   background: $primaryColor;
   color: #c8d8e4;
   border-top: 4px solid #000;
-  position: fixed;
+  // position: fixed;
   bottom: 0;
   z-index: 10;
 
