--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -1,16 +1,12 @@
 /* Modal */
 
-
-
 .modalContainer {
-  // position: relative;
   height: 100%;
   width: 100%;
 }
 
 .modal {
   display: flex;
-
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -25,7 +21,6 @@
 
 .modal > div {
   background-color: $primaryColor;
-  // opacity: 0.9;
   border-radius: 20px;
   width: 90vw;
   height: 100%;
@@ -51,30 +46,9 @@
   background: transparent;
   transition: all 0.4s ease;
   width: 50%;
-  // height: 70%;
-}
-
-.closeElementIcon {
-  font-size: 3rem;
-  color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 15px;
-  right: 20px;
-  background: transparent;
-  border: none;
-  transition: all 0.2s ease-in-out;
-  z-index: 1;
-}
-
-.closeElementIcon:hover {
-  color: rgba(0, 0, 0, 0.9);
-  cursor: pointer;
-  transform: rotate(180deg) scale(1.1);
-  transition-duration: 0.2s;
 }
 
 .modalImageContent {
-  // height: 70%;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -100,6 +74,26 @@
     bottom: 30px;
     opacity: 0.8;
   }
+}
+
+.closeElementIcon {
+  font-size: 3rem;
+  color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  background: transparent;
+  border: none;
+  transition: all 0.2s ease-in-out;
+  z-index: 1;
+}
+
+.closeElementIcon:hover,
+.closeElementIcon:focus {
+  color: rgba(0, 0, 0, 0.9);
+  cursor: pointer;
+  transform: rotate(180deg) scale(1.1);
+  transition-duration: 0.2s;
 }
 
 .addButton {
