--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,27 +1,27 @@
 footer {
-  height: 100px;
+  height: 75px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: $primaryColor;
+  background: #000;
   color: #c8d8e4;
-  border-top: 4px solid #000;
-  // position: fixed;
+  // border-top: 4px solid #;
+  position: fixed;
   bottom: 0;
-  z-index: 10;
+  z-index: 5;
 
   img {
-      padding: 20px 0;
-      height: 100%;
-      width: 50%;
+      padding: 5px 0 10px 0;
+      // height: 100%;
+      width: 20%;
       display: block;
   }
 
   a {
       text-decoration: none;
-      color: #000;
+      color: #c8d8e4;
       font-family: $headerFont;
       text-transform: uppercase;
   }
