--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -17,11 +17,12 @@
   height: 90vh;
   background: transparent;
   transition: all 0.4s ease;
+  
 }
 
 .modal > div {
   background-color: $primaryColor;
-  opacity: 1;
+  // opacity: 0.5;
   border-radius: 20px;
   width: 90vw;
   height: 100%;
