--- a/src/styles/_randomMovieModal.scss
+++ b/src/styles/_randomMovieModal.scss
@@ -1,13 +1,15 @@
 
-.randomPickModalContainer {
-  height: 100%;
-  width: 100%;
-}
+// .randomMoviePage {
+//   width: 100vw;
+//   height: 100vh;
+//   background: black;
+// }
+
 
 .randomPickModal {
   display: flex;
   justify-content: center;
-//   flex-direction: column;
+  //   flex-direction: column;
   align-items: center;
   position: fixed;
   top: 0;
@@ -17,27 +19,28 @@
   height: 90vh;
   background: transparent;
   transition: all 0.4s ease;
-
-    img {
-    width: 30%;
+  
+  img {
+    width: 50%;
     display: block;
     margin-bottom: 40px;
   }
 }
 
-.randomPickModal > div {
+.randomPickModalContainer {
   background-color: $primaryColor;
   opacity: 1;
   border-radius: 20px;
-  width: 90vw;
+  // width: 90vw;
   height: 100%;
   padding: 60px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   transition: all 0.4s ease;
   position: absolute;
   top: 20px;
   border: 3px solid #000;
-  box-shadow: 4px 4px #000;
+  box-shadow: 5px 5px 350px 350px rgba(0,0,0,0.85);
 }
