--- a/src/styles/_resultContainer.scss
+++ b/src/styles/_resultContainer.scss
@@ -8,12 +8,28 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 80px;
 
+  li {
+  padding: 5px;
+  // height: 150%;
+  // position: relative;
+}
+
+img {
+  width: 100%;
+  display: block;
+  height: 100%;
+  outline: 1px solid black;
+  // position: relative;
+  
+}
   img:hover,
   img:focus {
     transform: scale(1.1);
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-    border: 10px solid rgba(0, 0, 0, 0.4);
+    border: 5px solid $primaryColor;
+
   }
 }
