forgot to change import of modal in App.scss

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,7 @@
 @import "variables";
 @import "footer";
 @import "typography";
-@import "modal";
+@import "userListModal";
 @import "resultContainer";
 @import "userListStyle";
 @import "randomMovieModal";
