--- a/src/styles/_iconsAndButtons.scss
+++ b/src/styles/_iconsAndButtons.scss
@@ -24,10 +24,11 @@
 }
 
 .trashIcon {
-  color: $primaryColor;
+  color: red;
   font-size: 1.2rem;
   transition: all 0.2s ease-in-out;
   opacity: 0.7;
+  background: rgb(34, 34, 34);
   // box-shadow: 0 0 5px 5px rgba(0,0,0,0.8)
 }
 
