--- a/src/styles/_userListStyle.scss
+++ b/src/styles/_userListStyle.scss
@@ -22,16 +22,16 @@
     font-weight: 800;
     padding: 10px 0;
     position: relative;
-    
+
     span {
-          color: $primaryColor;
-text-shadow: 5px 5px 30px rgba(0,0,0,1);
-    letter-spacing: 1.5px;
-    font-weight: 800;
-    padding: 10px 5px;
-    position: relative;
-    // font-style: italic;
-    bottom: 5px;
+      color: $primaryColor;
+      text-shadow: 5px 5px 30px rgba(0, 0, 0, 1);
+      letter-spacing: 1.5px;
+      font-weight: 800;
+      padding: 10px 5px;
+      position: relative;
+      // font-style: italic;
+      bottom: 5px;
     }
   }
   form {
@@ -53,8 +53,6 @@ text-shadow: 5px 5px 30px rgba(0,0,0,1);
   }
 }
 
-
-
 .userList {
   display: flex;
   background: $tertiaryColor;
@@ -68,73 +66,69 @@ text-shadow: 5px 5px 30px rgba(0,0,0,1);
   overflow-x: hidden;
   text-align: center;
   // border: 2px solid black;
-    box-shadow: 0 0 15px 10px rgba(0,0,0,0.4);
-    justify-content: space-around;
-    align-items: center;
+  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.4);
+  justify-content: space-around;
+  align-items: center;
 
-    h2 {
-      padding: 40px 0;
-      text-shadow: 5px 5px 30px rgba(0,0,0,1);
-      text-transform: uppercase;
-      letter-spacing: 2.5px;
-      font-weight: 700;
-      width: 100%;
-      font-size: 3rem;
-      color: $primaryColor;
-      // opacity: 1;
-    }
-  
+  h2 {
+    padding: 40px 0;
+    text-shadow: 5px 5px 30px rgba(0, 0, 0, 1);
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 700;
+    width: 100%;
+    font-size: 3rem;
+    color: $primaryColor;
+    // opacity: 1;
+  }
 
   ul {
     display: flex;
-justify-content: space-around;
-align-items: center;
+    justify-content: space-around;
+    align-items: center;
 
-flex-wrap: wrap;
- 
+    flex-wrap: wrap;
 
-  li {
-    width: 25%;
-    transition: all 0.2s ease-in-out;
-    position: relative;
-    margin: 20px;
-    
-    button {
-      position: absolute;
-      // background: transparent;
-      // border-radius: 10px;
-      background-color: #000;
-      color: $primaryColor;
-      border: none;
-      right: 15px;
-      top: 15px;
-      padding: 5px;
+    li {
+      width: 25%;
+      transition: all 0.2s ease-in-out;
+      position: relative;
+      margin: 20px;
+
+      button {
+        position: absolute;
+        background: transparent;
+        // border-radius: 10px;
+        // background-color: #000;
+        padding: 0;
+        border: none;
+        right: 15px;
+        top: 15px;
+      }
+
+      button:hover,
+      button:focus {
+        cursor: pointer;
+        // background: transparent;
+      }
     }
 
-    button:hover,
-    button:focus {
+    li:hover,
+    li:focus {
+      transform: scale(1.1);
       cursor: pointer;
-      // background: transparent;
+      transition-duration: 0.2s;
+      z-index: 5;
+    }
 
+    .movieListItem {
+      display: flex;
+      flex-direction: column;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
-
-  li:hover,
-  li:focus {
-    transform: scale(1.1);
-    cursor: pointer;
-    transition-duration: 0.2s;
-    z-index: 5;
-  }
-
-  .movieListItem {
-    display: flex;
-    flex-direction: column;
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-   }
 }
