--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,5 +9,5 @@
 @import "userListStyle";
 @import "randomMovieModal";
 @import "hamburgerMenu";
-@import "iconsAndButtons";
+@import "iconsStyling";
 
