--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -1,3 +1,5 @@
+// Icons Styling
+
 .closeElementButton {
     padding:0;
     border:none;
@@ -25,17 +27,24 @@
 
 .trashIcon {
   color: red;
-  font-size: 1.2rem;
+  // background: #fff;
+  // height: 35px;
+  // width: 150%;
+  // outlin: 1px solid #fff;
+  font-size: 2rem;
+  // font-weight: bold;
   transition: all 0.2s ease-in-out;
-  opacity: 0.7;
-  background: rgb(34, 34, 34);
+  opacity: 0.8;
+
+  // background: rgb(34, 34, 34);
   // box-shadow: 0 0 5px 5px rgba(0,0,0,0.8)
 }
 
 .trashIcon:hover {
   transform: rotateY(360deg) scale(1.2);
-  transition-duration: 0.4s;
+  transition-duration: 0.1s;
   opacity: 1;
+    cursor: scale(1.5);
 }
 
 .addButton {
