--- a/src/styles/_userListStyle.scss
+++ b/src/styles/_userListStyle.scss
@@ -1,19 +1,14 @@
+// User Movie List Styling
+
 .userListContainer {
   background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  // margin: 20px auto 100px;
   width: 90%;
-  // position: relative;
-  // height: 30px;
-  // overflow-y: scroll;
   border-radius: 20px;
-  // padding: 30px;
-  // border: 3px solid #000;
-
-  // overflow: auto;
+  position: relative;
 
   h3 {
     color: rgb(58, 56, 56);
@@ -30,7 +25,6 @@
       font-weight: 800;
       padding: 10px 5px;
       position: relative;
-      // font-style: italic;
       bottom: 5px;
     }
   }
@@ -41,6 +35,8 @@
     border: 3px solid #000;
     border-radius: 10px;
     margin: 20px 0;
+    position: relative;
+    // top: 60px;
 
     select {
       margin: 0 8px;
@@ -55,31 +51,27 @@
 
 .userList {
   display: flex;
-  background: $tertiaryColor;
-  // flex-direction: column;
+  background: rgb(228, 226, 226);
   flex-wrap: wrap;
-  width: 85%;
+  width: 95%;
   margin: 20px 0;
-  // border-radius: 20px;
   border: 3px solid #000;
-  // overflow-y: scroll ;
   overflow-x: hidden;
   text-align: center;
-  // border: 2px solid black;
   box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.4);
   justify-content: space-around;
   align-items: center;
 
   h2 {
     padding: 40px 0;
-    text-shadow: 5px 5px 30px rgba(0, 0, 0, 1);
+    // text-shadow: 5px 5px 30px rgba(0, 0, 0, 1);
+    text-shadow: none;
     text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 700;
+    letter-spacing: 3.5px;
+    font-weight: 800;
     width: 100%;
     font-size: 3rem;
-    color: $primaryColor;
-    // opacity: 1;
+    color: rgb(22, 22, 22);
   }
 
   ul {
@@ -90,26 +82,28 @@
     flex-wrap: wrap;
 
     li {
-      width: 25%;
+      width: 15%;
       transition: all 0.2s ease-in-out;
       position: relative;
-      margin: 20px;
+      margin: 5px;
 
       button {
         position: absolute;
-        background: transparent;
-        // border-radius: 10px;
-        // background-color: #000;
+        background: #000;
+        height: 55px;
+        width: 55px;
+        border-radius: 50%;
         padding: 0;
         border: none;
-        right: 15px;
-        top: 15px;
+        left: 15px;
+        bottom: 15px;
+
       }
 
       button:hover,
       button:focus {
         cursor: pointer;
-        // background: transparent;
+
       }
     }
 
@@ -128,6 +122,7 @@
       img {
         width: 100%;
         height: 100%;
+        outline: 1px solid #000;
       }
     }
   }
