--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -47,6 +47,30 @@
     cursor: scale(1.5);
 }
 
+.randomSelectionButton {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 800;
+  background: $primaryColor;
+  border: 0;
+  padding: 0;
+  height: 100px;
+  width: 300px;
+  position: absolute;
+  z-index: 10;
+  right: 0;
+  outline: 2px solid #000;
+  top: 70px;
+    // box-shadow: 0 0 15px 50px rgba(124, 123, 123, 0.8);
+
+}
+
+.randomSelectionButton:hover {
+background: #000;
+color: $primaryColor;
+}
+
+
 .addButton {
   position: absolute;
   bottom: 20px;
