--- a/src/styles/_resultContainer.scss
+++ b/src/styles/_resultContainer.scss
@@ -4,6 +4,18 @@
   width: 100%;
 }
 
+/* MovieDetails */
+
+.poster {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.poster-image {
+  width: 20vw;
+}
+
 .resultContainer {
   display: flex;
   flex-wrap: wrap;
@@ -19,7 +31,7 @@
 img {
   width: 100%;
   display: block;
-  height: 100%;
+  // height: 100%;
   outline: 1px solid black;
   // position: relative;
   
