--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -96,14 +96,14 @@ h4 {
   }
 }
 
-h5 {
-  color: #E26822;
-  font-size: 1.5rem;
-  font-style: italic;
-  letter-spacing: 1.2px;
-  padding-top: 20px;
-  text-align: center;
-}
+// h5 {
+//   color: #E26822;
+//   font-size: 1.5rem;
+//   font-style: italic;
+//   letter-spacing: 1.2px;
+//   padding-top: 20px;
+//   text-align: center;
+// }
 
 p {
   font-family: $bodyFont;
