more final styling before responsiveness

--- a/src/styles/_hamburgerMenu.scss
+++ b/src/styles/_hamburgerMenu.scss
@@ -32,9 +32,10 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  border: 1px solid #000;
   padding: 15px;
   background-color: $primaryColor;
-  opacity: 0.6;
+  opacity: 0.8;
   display: flex;
   align-items: center;
   justify-content: center;
