--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -49,19 +49,20 @@
 
 .randomSelectionButton {
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 800;
   background: $primaryColor;
   border: 0;
   padding: 0;
-  height: 100px;
+  height: 60px;
   width: 300px;
-  position: absolute;
+  // position: absolute;
   z-index: 10;
-  right: 0;
+  // right: 0;
   outline: 2px solid #000;
-  top: 70px;
+  // top: 70px;
     // box-shadow: 0 0 15px 50px rgba(124, 123, 123, 0.8);
+
 
 }
 
