--- a/src/styles/_userListStyle.scss
+++ b/src/styles/_userListStyle.scss
@@ -20,7 +20,7 @@
 
     span {
       color: $primaryColor;
-      text-shadow: 5px 5px 30px rgba(0, 0, 0, 1);
+      text-shadow: 3px 3px 20px rgba(0, 0, 0, 1);
       letter-spacing: 1.5px;
       font-weight: 800;
       padding: 10px 5px;
@@ -49,6 +49,26 @@
   }
 }
 
+.filterButtonDiv {
+padding: 15px 0;
+
+  button {
+    text-transform: uppercase;
+    height: 40px;
+    font-weight: 700;
+    letter-spacing: 1.2px;
+  }
+
+}
+
+.movieListHeader {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
+      padding: 40px 0;
+}
+
 .userList {
   display: flex;
   background: rgb(228, 226, 226);
@@ -63,13 +83,15 @@
   align-items: center;
 
   h2 {
-    padding: 40px 0;
+
     // text-shadow: 5px 5px 30px rgba(0, 0, 0, 1);
     text-shadow: none;
     text-transform: uppercase;
+    text-align: left;
     letter-spacing: 3.5px;
     font-weight: 800;
-    width: 100%;
+    padding: 0 200px 0 30px;
+    // width: 100%;
     font-size: 3rem;
     color: rgb(22, 22, 22);
   }
@@ -82,10 +104,17 @@
     flex-wrap: wrap;
 
     li {
-      width: 15%;
+          // display: flex;
+      width: 20%;
       transition: all 0.2s ease-in-out;
       position: relative;
       margin: 5px;
+       
+         img {
+            width: 100%;
+                    outline: 1px solid #000;
+         }
+       
 
       button {
         position: absolute;
@@ -117,13 +146,8 @@
 
     .movieListItem {
       display: flex;
-      flex-direction: column;
+      // flex-direction: column;
 
-      img {
-        width: 100%;
-        height: 100%;
-        outline: 1px solid #000;
-      }
     }
   }
 }
