--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -19,7 +19,7 @@ footer {
 
     
       .footerLeft {
-        width: 30%;
+        width: 50%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -52,4 +52,26 @@ footer {
       }
 
   }
+
+}
+
+@media (max-width: 480px) {
+
+  .userList {
+    ul {
+      li {
+        width: 25%;
+      }
+    }
+  }
+
+  footer {
+    font-size: 0.8rem;
+}
+}
+
+@media (max-width:380px) {
+    footer {
+      font-size: 0.7rem;
+    }
 }
