--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -47,30 +47,24 @@
     cursor: scale(1.5);
 }
 
-.randomSelectionButton {
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-weight: 800;
-  background: $primaryColor;
-  border: 0;
-  padding: 0;
-  height: 60px;
-  width: 300px;
-  // position: absolute;
-  z-index: 10;
-  // right: 0;
-  outline: 2px solid #000;
-  // top: 70px;
-    // box-shadow: 0 0 15px 50px rgba(124, 123, 123, 0.8);
+  .randomSelectionButton {
+    // margin: 20px 0;
+    // height: 100px;
+    background: rgb(13, 151, 13);
+    font-size: 1.3rem;
+    width: 300px;
+    padding: 10px 10px;
+    border-radius: 15px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1.2px;
+    outline: 1px solid #000;
+  }
 
-
-}
-
-.randomSelectionButton:hover {
-background: #000;
-color: $primaryColor;
-}
-
+  .randomSelectionButton:hover {
+    background: rgb(18, 209, 18);
+    // color: $primaryColor;
+  }
 
 .addButton {
   position: absolute;
