--- a/src/styles/_userListStyle.scss
+++ b/src/styles/_userListStyle.scss
@@ -13,24 +13,24 @@
   h3 {
     color: rgb(58, 56, 56);
     text-shadow: 4px 4px $primaryColor;
-    letter-spacing: 1.5px;
+    letter-spacing: 2.5px;
     font-weight: 800;
-    padding: 10px 0;
+    padding: 0;
     position: relative;
 
     span {
       color: $primaryColor;
       text-shadow: 3px 3px 20px rgba(0, 0, 0, 1);
-      letter-spacing: 1.5px;
+      letter-spacing: 3.5px;
       font-weight: 800;
-      padding: 10px 5px;
+
       position: relative;
       bottom: 5px;
     }
   }
   form {
     background: $tertiaryColor;
-    padding: 20px 0;
+    // padding: 20px 0;
     text-align: center;
     border: 3px solid #000;
     border-radius: 10px;
@@ -66,7 +66,7 @@ padding: 15px 0;
   width: 100%;
   justify-content: flex-start;
   align-items: center;
-      padding: 40px 0;
+      padding: 20px 0 10px 0;
 }
 
 .userList {
@@ -109,6 +109,7 @@ padding: 15px 0;
       transition: all 0.2s ease-in-out;
       position: relative;
       margin: 5px;
+      
        
          img {
             width: 100%;
