--- a/src/styles/_randomMovieModal.scss
+++ b/src/styles/_randomMovieModal.scss
@@ -1,15 +1,8 @@
 
-// .randomMoviePage {
-//   width: 100vw;
-//   height: 100vh;
-//   background: black;
-// }
-
 
 .randomPickModal {
   display: flex;
   justify-content: center;
-  //   flex-direction: column;
   align-items: center;
   position: fixed;
   top: 0;
@@ -19,14 +12,10 @@
   height: 90vh;
   background: transparent;
   transition: all 0.4s ease;
-  // position: relative;
 
-
-  
   img {
     width: 60%;
     display: block;
-    // margin-bottom: 40px;
     outline: 1px solid #000;
   }
 }
@@ -35,7 +24,6 @@
   background-color: $primaryColor;
   opacity: 1;
   border-radius: 20px;
-  // width: 90vw;
   height: 100%;
   padding: 60px;
   display: flex;
@@ -46,5 +34,5 @@
   position: absolute;
   top: 20px;
   border: 3px solid #000;
-  box-shadow: 5px 5px 350px 350px rgba(0,0,0,0.85);
+  box-shadow: 5px 5px 350px 350px rgba(0, 0, 0, 0.85);
 }
