--- a/src/styles/_userListModal.scss
+++ b/src/styles/_userListModal.scss
@@ -1,4 +1,4 @@
-/* Modal */
+/* User Pop up List Modal */
 
 .modalContainer {
   height: 100%;
@@ -19,20 +19,18 @@
   transition: all 0.4s ease;
 
   h2 {
-  color: $secondaryColor;
-  padding-top: 5px;
-  font-size: 4rem;
+    color: $secondaryColor;
+    padding-top: 5px;
     font-size: 4rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
-}
-  
+    font-size: 4rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
+  }
 }
 
 .modal > div {
   background-color: $primaryColor;
-  // opacity: 0.5;
   border-radius: 20px;
   width: 90vw;
   height: 100%;
@@ -51,10 +49,9 @@
   width: 40%;
 }
 
-.modalLeft{
+.modalLeft {
   width: 60%;
 }
-
 
 .movieDetailsDiv {
   display: flex;
@@ -64,11 +61,15 @@
 }
 
 .detailsSide {
-  
+  width: 35%;
   span {
     display: flex;
     flex-direction: column;
   }
+}
+
+.youTubeSide{
+  width:60%;
 }
 
 .modalTextContent {
@@ -87,9 +88,9 @@
     font-size: 3.5rem;
   }
 
-    p {
-      padding: 20px 0;
-    }
+  p {
+    padding: 20px 0;
+  }
 }
 
 .modalImageContent {
@@ -120,5 +121,3 @@
     padding: 0 30px;
   }
 }
-
-
