--- a/src/styles/_userListStyle.scss
+++ b/src/styles/_userListStyle.scss
@@ -75,8 +75,8 @@
   overflow-x: hidden;
   text-align: center;
   box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.4);
-  justify-content: space-around;
-  align-items: center;
+  // justify-content: space-around;
+  // align-items: center;
 
   h2 {
     text-shadow: none;
@@ -91,18 +91,23 @@
 
   ul {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    padding-left: 10px;
+    // justify-content: space-around;
+    // align-items: center;
     flex-wrap: wrap;
 
+
     li {
-      width: 20%;
+      width: 15%;
       transition: all 0.2s ease-in-out;
       position: relative;
-      margin: 5px;
+      margin: 7px;
+      min-width: 230px;
+      max-height: 300px;
 
       img {
         width: 100%;
+        height: 100%;
         outline: 1px solid #000;
       }
 
@@ -114,8 +119,8 @@
         border-radius: 50%;
         padding: 0;
         border: none;
-        left: 15px;
-        bottom: 15px;
+        right: 15px;
+        top: 15px;
       }
 
       button:hover,
