--- a/src/styles/_randomMovieModal.scss
+++ b/src/styles/_randomMovieModal.scss
@@ -5,16 +5,16 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
+  top: -20px;
   left: 0;
   z-index: 12000;
-  width: 100vw;
-  height: 90vh;
+  width: 100%;
+  height: 95%;
   background: transparent;
   transition: all 0.4s ease;
 
   img {
-    width: 60%;
+    width: 70%;
     display: block;
     outline: 1px solid #000;
   }
