--- a/src/styles/_userListStyle.scss
+++ b/src/styles/_userListStyle.scss
@@ -1,5 +1,6 @@
 // User Movie List Styling
 
+
 .userListContainer {
   background: transparent;
   display: flex;
@@ -9,6 +10,8 @@
   width: 90%;
   border-radius: 20px;
   position: relative;
+
+
 
   h3 {
     color: rgb(58, 56, 56);
@@ -56,20 +59,12 @@
     letter-spacing: 1.2px;
   }
 }
-
-.movieListHeader {
-  display: flex;
-  width: 100%;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 20px 0 10px 0;
-}
-
 .userList {
   display: flex;
   background: rgb(228, 226, 226);
   flex-wrap: wrap;
   width: 95%;
+  height: auto;
   margin: 20px 0;
   border: 3px solid #000;
   overflow-x: hidden;
@@ -77,17 +72,38 @@
   box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.4);
   // justify-content: space-around;
   // align-items: center;
+}
 
-  h2 {
+.movieListHeader {
+  display: flex;
+  width: 100%;
+  max-height: 25%;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px 10px;
+
+    h2 {
     text-shadow: none;
     text-transform: uppercase;
     text-align: left;
     letter-spacing: 3.5px;
-    font-weight: 800;
-    padding: 0 200px 0 30px;
+    font-weight: bold;
+    min-width: 70%;
     font-size: 3rem;
-    color: rgb(22, 22, 22);
+    color: rgb(15, 15, 15);
+    padding-left: 10px;
   }
+}
+
+  
+.movieList {
+
+  height: 75%;
+  width: 95%;
+  margin: 0 auto;
+  font-family: $bodyFont;
+  font-size: 2rem;
+  color: rgb(158, 3, 3);
 
   ul {
     display: flex;
@@ -98,16 +114,17 @@
 
 
     li {
-      width: 15%;
+      width: 23%;
       transition: all 0.2s ease-in-out;
       position: relative;
-      margin: 7px;
-      min-width: 230px;
-      max-height: 300px;
+      margin: 8px;
+
 
       img {
         width: 100%;
         height: 100%;
+              min-width: 230px;
+      max-height: 330px;
         outline: 1px solid #000;
       }
 
