--- a/src/styles/_mediaQueries.scss
+++ b/src/styles/_mediaQueries.scss
@@ -1,9 +1,10 @@
 @media (max-height: 1000px) {
   .modalTextContent {
     h3 {
-      font-size: 2rem;
+      font-size: 3rem;
       text-align: left;
       letter-spacing: 1.5px;
+      // padding-bottom: 20px;
     }
   }
 }
@@ -11,16 +12,144 @@
 
 @media (max-width: 1280px) {
 
+  .modalTextContent {
+
+    h3 {
+      font-size: 2.2rem;
+    }
+  }
+
+  .youTubeSide {
+    height: 100%;
+  }
 
 }
 
+
+// 1024px STYLING
 
 @media (max-width: 1024px) {
 
-  
+.userList {
+
+  ul {
+
+    li {
+
+      width: 23%;
+
+      img {
+
+        min-width: 150px;
+      }
+    }
+  }
+}
+
+// .poster-path {
+
+//   img {
+
+//     min-width: 325px;
+//   }
+// }
+
+.resultContainer {
+
+  img {
+    min-width: 325px;
+  }
+
+}
+
+.movieListHeader {
+  padding: 20px 40px 20px 0;
 }
 
 
+.randomPickModalContainer {
+  max-height: 900px;
+
+  img {
+
+    width: 90%;
+    // max-width: 450px;
+    // max-height: 650px;
+  }
+}
+
+.modalContainer {
+  max-height: 65%;
+
+}
+
+.modalImageContent {
+
+  img {
+    width: 100%;
+    margin-top: 100px;
+    margin-left: 10px;
+  }
+
+  h5 {
+
+    margin-bottom: 20px;
+    margin-left: 10px;
+    letter-spacing: 1.2px;
+  }
+}
+
+// .poster-image {
+//   width: 40%;
+// }
+
+}
+
+@media (max-width: 834px) {
+
+  .modal {
+    height: 140vh;
+  }
+
+  .modalImageContent {
+
+    img {
+
+      margin-top: 150px;
+    }
+
+    h5 {
+
+      margin-bottom: 200px;
+    }
+  }
+
+  .addButton {
+    margin-bottom: 250px;
+  }
+  
+  .movieListHeader {
+    min-height: 30%;
+  }
+
+  .userList {
+    ul  {
+
+      li {
+
+        width: 22%;
+        margin: 10px;
+      }
+    }
+  }
+
+}
+
+
+
+
+
+// 480px STLYING
 
 @media (max-width: 480px) {
   .modal > div {
