--- a/src/styles/_resultContainer.scss
+++ b/src/styles/_resultContainer.scss
@@ -6,13 +6,13 @@
 
 .poster {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
 }
 
-.poster-image {
-  width: 20vw;
-}
+// .poster-image {
+//   width: 20vw;
+// }
 
 .resultContainer {
   display: flex;
@@ -21,7 +21,7 @@
   margin-bottom: 80px;
 
 li {
-    margin: 5px;
+    margin: 6px;
 
 }
 
