--- a/src/styles/_userListModal.scss
+++ b/src/styles/_userListModal.scss
@@ -47,10 +47,12 @@
 
 .modalRight {
   width: 40%;
+  height: 100%
 }
 
 .modalLeft {
   width: 60%;
+  height: 100%;
 }
 
 .movieDetailsDiv {
@@ -83,6 +85,7 @@
   background: transparent;
   transition: all 0.4s ease;
   width: 100%;
+  height: 100%;
 
   h3 {
     font-size: 3.5rem;
@@ -90,6 +93,10 @@
 
   p {
     padding: 20px 0;
+    letter-spacing: 0.8px;
+    line-height: 1.4;
+    font-weight: 600;
+    font-size: 1.2rem;
   }
 }
 
@@ -103,7 +110,7 @@
   img {
     width: 80%;
     display: block;
-    margin-bottom: 40px;
+    margin-top: 50px;
   }
 
   button {
@@ -116,7 +123,7 @@
     position: absolute;
     font-size: 1.2rem;
     color: red;
-    bottom: 40px;
+    bottom: 60px;
     opacity: 0.8;
     padding: 0 30px;
   }
