--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -15,7 +15,7 @@ footer {
     width: 100%;
 
     .footerLeft {
-      width: 50%;
+      width: 70%;
       height: 100%;
       display: flex;
       align-items: center;
@@ -31,6 +31,7 @@ footer {
       align-items: center;
       width: 20%;
       height: 100%;
+      padding-right: 10px;
     }
 
     img {
