cleaned up styling code

--- a/src/styles/_userListModal.scss
+++ b/src/styles/_userListModal.scss
@@ -47,7 +47,7 @@
 
 .modalRight {
   width: 40%;
-  height: 100%
+  height: 100%;
 }
 
 .modalLeft {
@@ -70,8 +70,8 @@
   }
 }
 
-.youTubeSide{
-  width:60%;
+.youTubeSide {
+  width: 60%;
 }
 
 .modalTextContent {
