--- a/src/styles/_mediaQueries.scss
+++ b/src/styles/_mediaQueries.scss
@@ -4,16 +4,12 @@
       font-size: 3rem;
       text-align: left;
       letter-spacing: 1.5px;
-      // padding-bottom: 20px;
     }
   }
 }
 
-
 @media (max-width: 1280px) {
-
   .modalTextContent {
-
     h3 {
       font-size: 2.2rem;
     }
@@ -22,107 +18,78 @@
   .youTubeSide {
     height: 100%;
   }
-
 }
-
 
 // 1024px STYLING
 
 @media (max-width: 1024px) {
+  .userList {
+    ul {
+      li {
+        width: 22%;
 
-.userList {
-
-  ul {
-
-    li {
-
-      width: 22%;
-
-      img {
-
-        min-width: 150px;
+        img {
+          min-width: 150px;
+        }
       }
+    }
+  }
+
+  .resultContainer {
+    img {
+      min-width: 325px;
+    }
+  }
+
+  .movieListHeader {
+    padding: 20px 40px 20px 0;
+  }
+
+  .randomPickModalContainer {
+    max-height: 900px;
+
+    img {
+      width: 90%;
+    }
+  }
+
+  .modalContainer {
+    max-height: 65%;
+  }
+
+  .modalImageContent {
+    img {
+      width: 100%;
+      margin-top: 100px;
+      margin-left: 10px;
+    }
+
+    h5 {
+      margin-bottom: 20px;
+      margin-left: 10px;
+      letter-spacing: 1.2px;
     }
   }
 }
 
-// .poster-path {
-
-//   img {
-
-//     min-width: 325px;
-//   }
-// }
-
-.resultContainer {
-
-  img {
-    min-width: 325px;
-  }
-
-}
-
-.movieListHeader {
-  padding: 20px 40px 20px 0;
-}
-
-
-.randomPickModalContainer {
-  max-height: 900px;
-
-  img {
-
-    width: 90%;
-    // max-width: 450px;
-    // max-height: 650px;
-  }
-}
-
-.modalContainer {
-  max-height: 65%;
-
-}
-
-.modalImageContent {
-
-  img {
-    width: 100%;
-    margin-top: 100px;
-    margin-left: 10px;
-  }
-
-  h5 {
-
-    margin-bottom: 20px;
-    margin-left: 10px;
-    letter-spacing: 1.2px;
-  }
-}
-
-}
-
-
 // 834px STYLING
 
 @media (max-width: 834px) {
-
   h1 {
     padding-top: 50px;
   }
 
-.headerForm {
-  
-  form {
-    width: 60%;
+  .headerForm {
+    form {
+      width: 60%;
+    }
   }
-}
 
   .modal {
     height: 140vh;
   }
 
   .modalTextContent {
-
     h3 {
       text-align: left;
       letter-spacing: 1.5px;
@@ -134,14 +101,11 @@
   }
 
   .modalImageContent {
-
     img {
-
       margin-top: 150px;
     }
 
     h5 {
-
       margin-bottom: 200px;
     }
   }
@@ -149,44 +113,34 @@
   .addButton {
     margin-bottom: 250px;
   }
-  
+
   .movieListHeader {
     min-height: 30%;
   }
 
   .userList {
-    ul  {
-
+    ul {
       li {
-
         width: 22%;
         margin: 10px;
       }
     }
   }
-
 }
-
-
-
-
 
 // 480px STLYING
 
 @media (max-width: 480px) {
-
   .modal > div {
     padding: 0;
-       height: 95vh;
+    height: 95vh;
   }
 
-    h1 {
-      padding-top: 100px;
-    }
+  h1 {
+    padding-top: 100px;
+  }
 
-
-.headerForm    {
-
+  .headerForm {
     form {
       justify-content: center;
       align-items: center;
@@ -197,11 +151,9 @@
       }
 
       button {
-        height: 60px
+        height: 60px;
       }
     }
-
-
   }
 
   .modalImageContent {
@@ -216,13 +168,9 @@
     img {
       margin-bottom: 25px;
       width: 100%;
-      margin-top:0;
+      margin-top: 0;
     }
   }
-
-  // .poster-image {
-  //   width: 35vw;
-  // }
 
   .addButton {
     margin-bottom: 320px;
@@ -234,7 +182,6 @@
   .modalContainer {
     flex-direction: column;
     height: 100vh;
- 
   }
 
   .movieListHeader {
@@ -249,11 +196,6 @@
         width: 45%;
       }
     }
-
-    // button {
-    //   transform: scale(0.5);
-    //   top: -10px;
-    // }
 
     h2 {
       font-size: 1.6rem;
@@ -343,18 +285,14 @@
   }
 }
 
-
-
 // 414px STYLING
 
 @media (max-width: 414px) {
-
   h1 {
     padding-top: 40px;
   }
 
   .movieList {
-
     ul {
       padding-left: 0;
 
@@ -371,115 +309,96 @@
 
   .randomPickModal img {
     width: 95%;
-}
+  }
 
-.modalRight {
-  width: 50%;
-  height: 100%;
-}
+  .modalRight {
+    width: 50%;
+    height: 100%;
+  }
 
-.addButton {
-  margin-bottom: 370px;
+  .addButton {
+    margin-bottom: 370px;
+  }
 }
-}
-
 
 // 380px STYLING
 
-@media (max-width:380px) {
-
-  .modalTextContent  {
-
-    h3{
-    font-size: 1.4rem;
-    padding-top: 0;
-}
+@media (max-width: 380px) {
+  .modalTextContent {
+    h3 {
+      font-size: 1.4rem;
+      padding-top: 0;
+    }
   }
 
-    .movieList {
-
-    ul{
-
+  .movieList {
+    ul {
       li {
-    width: 44%;
+        width: 44%;
         img {
-
           width: 50%;
           min-width: 135px;
-
         }
       }
-      }
-
-}
+    }
+  }
 
   .modalImageContent {
-    
     width: 80%;
 
     h5 {
-    margin-bottom: 260px;
-    padding-left: 50px;
+      margin-bottom: 260px;
+      padding-left: 50px;
     }
-}
+  }
 
-.menu-wrap .menu > div {
-  height: 110vh;
-}
+  .menu-wrap .menu > div {
+    height: 110vh;
+  }
 
-.userListContainer {
+  .userListContainer {
     padding-top: 0;
-    // height: 110vh;
-}
+  }
 
-.movieListHeader {
+  .movieListHeader {
     min-height: 45%;
-
 
     h2 {
       padding-left: 10px;
     }
-}
-
+  }
 
   footer {
     font-size: 0.8rem;
   }
-
 }
 
 // 320px STYLING
 
 @media (max-width: 320px) {
-
   .movieList {
-
-    ul{
-
+    ul {
       li {
-    width: 45%;
+        width: 45%;
         img {
-
           width: 50%;
           min-width: 135px;
-
         }
       }
-      }
+    }
+  }
 
-}
-
-.modalImageContent {
+  .modalImageContent {
     width: 100%;
     margin-bottom: 30px;
 
     h5 {
-    margin-bottom: 260px;
-    padding-left: 80px;
-}
+      margin-bottom: 260px;
+      padding-left: 80px;
+    }
 
     img {
       margin-bottom: 60px;
     }
-}
+  }
 }
