--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -49,6 +49,7 @@
   font-weight: 600;
   letter-spacing: 1.2px;
   outline: 1px solid #000;
+  border: 0;
 }
 
 .randomSelectionButton:hover {
@@ -73,6 +74,7 @@
   font-weight: 600;
   letter-spacing: 1.2px;
   outline: 1px solid #000;
+  border: 0;
 }
 
 .playButton:hover {
