--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -49,7 +49,11 @@
   font-weight: 600;
   letter-spacing: 1.2px;
   outline: 1px solid #000;
-  border: 0;
+  border: none;
+
+  button {
+    border: none;
+  }
 }
 
 .randomSelectionButton:hover {
@@ -74,7 +78,11 @@
   font-weight: 600;
   letter-spacing: 1.2px;
   outline: 1px solid #000;
-  border: 0;
+  border: none;
+
+  button {
+    border: none;
+  }
 }
 
 .playButton:hover {
