--- a/src/styles/_iconsStyling.scss
+++ b/src/styles/_iconsStyling.scss
@@ -53,6 +53,7 @@
 
   button {
     border: none;
+      border-radius: 15px;
   }
 }
 
@@ -82,6 +83,7 @@
 
   button {
     border: none;
+      border-radius: 15px;
   }
 }
 
